# spd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPD_v1.0  SPD_v1.0.md  setup.sh
.github/workflows/: ci.yml
cmake/: sdpConfig.cmake.in
cmake/toolchains/: arm-none-eabi.cmake  avr.cmake  pic-xc8.cmake  x86-linux.cmake  xtensa-esp32.cmake
src/: sdp.c  sdp.h  sdp_config.h
tests/: CMakeLists.txt  cross_compile_test.sh  test_crc.c  test_cross_compile.cmake  test_e2e.c  test_e2e_socket.c  test_framework.h  test_fuzz.c  test_hal.h
tests/cross-headers/: stdint.h  string.h
